fixed style bug where 'no valid schedules' noti wouldn't show up in dark mode

--- a/style_dark.css
+++ b/style_dark.css
@@ -25,7 +25,7 @@ body {
     background: #555555;
 }
 
-#weekTable {
+.left {
     background: #242424;
 }
 
